primera parte del diseño de la aplicaion de preguntas hecha

--- a/index.html
+++ b/index.html
@@ -7,18 +7,32 @@
     </head>
     <body>
         <div id="app">
+           
             <div class="config-container">
                 <h2 class="config-title">Quiz Configuration</h2>
                 <div class="config-option">
                     <h4 class="option-title">Selec Category</h4>
                     <div class="category-options">
-                        <button class="category-option">Programing</button>
+                        <button class="category-option active">Programing</button>
                         <button class="category-option">Geogpraphy</button>
                         <button class="category-option">Mathematics</button>
                         <button class="category-option">Entertaiment</button>
                     </div>
                 </div>
+
+                <div class="config-option">
+                    <h4 class="option-title">No. of Question</h4>
+                    <div class="questions-options">
+                        <button class="question-option">5</button>
+                        <button class="question-option active">10</button>
+                        <button class="question-option">15</button>
+                        <button class="question-option">20</button>
+                        <button class="question-option">25</button>
+                    </div>
+                </div>
+                <button class="star-quizt-button">Star Quiz</button>
             </div>
+
         </div>
         <script type="module" src="/src/index.ts"></script>
     </body>
