se creo la estructura del resultado al finalizar el quiz

--- a/index.html
+++ b/index.html
@@ -92,6 +92,22 @@
                     </button>
                 </footer>
             </section>
+
+            <section class="result-container">
+                <img
+                    src="./public/quiz-over.png"
+                    alt="images"
+                    loading="lazy"
+                    class="result-img"
+                />
+                <h2 class="resul-title">Quiz Complete</h2>
+                <p class="result-mesaage">
+                    You answer <b>3</b> out of <b>10</b> question correctly
+                    great effort!
+                </p>
+
+                <button class="try-again-button">Try again</button>
+            </section>
         </div>
         <script type="module" src="/src/index.ts"></script>
     </body>
