cambio sin importancia

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         In javascript, how do you create a fucntion. ?
                     </h1>
                     <ul class="answer-options">
-                        <li class="answer-option">
+                        <!-- <li class="answer-option">
                             <p>Crte funtion MyFunction ( ) {}</p>
                         </li>
 
@@ -75,7 +75,7 @@
                             <span class="material-symbols-outlined">
                                 cancel
                             </span>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
 
