adding the quiz Timer

--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
                 </div>
 
                 <footer class="quiz-footer">
-                    <p class="question-status">
-                        <b> 2 </b> of <b>10</b> Question
-                    </p>
+                    <p class="question-status"></p>
 
                     <button class="next-question-button">
                         Next
