se removieron algunos archivos para remplasarlos

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                     <h4 class="option-title">Selec Category</h4>
                     <div class="category-options">
                         <button class="category-option active">
-                            Programing
+                            programming
                         </button>
-                        <button class="category-option">Geogpraphy</button>
-                        <button class="category-option">Mathematics</button>
-                        <button class="category-option">Entertaiment</button>
+                        <button class="category-option">geography</button>
+                        <button class="category-option">mathematics</button>
+                        <button class="category-option">entertainment</button>
                     </div>
                 </div>
 
@@ -55,7 +55,7 @@
                         In javascript, how do you create a fucntion. ?
                     </h1>
                     <ul class="answer-options">
-                        <!-- <li class="answer-option">
+                        <li class="answer-option">
                             <p>Crte funtion MyFunction ( ) {}</p>
                         </li>
 
@@ -75,7 +75,7 @@
                             <span class="material-symbols-outlined">
                                 cancel
                             </span>
-                        </li> -->
+                        </li>
                     </ul>
                 </div>
 
