--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
                 </header>
 
                 <div class="quiz-content">
-                    <h1 class="queztion-text">
-                        In javascript, how do you create a fucntion. ?
-                    </h1>
+                    <h1 class="queztion-text"></h1>
                     <ul class="answer-options">
-                        <li class="answer-option">
+                        <!-- <li class="answer-option">
                             <p>Crte funtion MyFunction ( ) {}</p>
                         </li>
 
@@ -75,7 +73,7 @@
                             <span class="material-symbols-outlined">
                                 cancel
                             </span>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
 
@@ -107,6 +105,6 @@
                 <button class="try-again-button">Try again</button>
             </section>
         </div>
-        <script type="module" src="/src/index.ts"></script>
+        <script type="module" src="./src/index.ts"></script>
     </body>
 </html>
