se le agrego la funcionalidad de temporizador para las preguntas

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <h2 class="quiz-title">Quiz Aplication</h2>
 
                     <div class="quiz-timer">
-                        <p class="timer-duration">15s</p>
+                        <p class="timer-duration"></p>
                         <span class="material-symbols-outlined"> timer </span>
                     </div>
                 </header>
