mostrar los rresultados al terminar el quiz

--- a/index.html
+++ b/index.html
@@ -97,10 +97,7 @@
                     class="result-img"
                 />
                 <h2 class="resul-title">Quiz Complete</h2>
-                <p class="result-mesaage">
-                    You answer <b>3</b> out of <b>10</b> question correctly
-                    great effort!
-                </p>
+                <p class="result-mesaage"></p>
 
                 <button class="try-again-button">Try again</button>
             </section>
