--- a/index.html
+++ b/index.html
@@ -18,23 +18,54 @@
                 <div class="config-option">
                     <h4 class="option-title">Selec Category</h4>
                     <div class="category-options">
-                        <button class="category-option active">
+                        <button
+                            class="category-option active"
+                            data-category="programming"
+                        >
                             programming
                         </button>
-                        <button class="category-option">geography</button>
-                        <button class="category-option">mathematics</button>
-                        <button class="category-option">entertainment</button>
+                        <button
+                            class="category-option"
+                            data-category="geography"
+                        >
+                            geography
+                        </button>
+                        <button
+                            class="category-option"
+                            data-category="mathematics"
+                        >
+                            mathematics
+                        </button>
+                        <button
+                            class="category-option"
+                            data-category="entertainment"
+                        >
+                            entertainment
+                        </button>
                     </div>
                 </div>
 
                 <div class="config-option">
                     <h4 class="option-title">No. of Question</h4>
                     <div class="questions-options">
-                        <button class="question-option">5</button>
-                        <button class="question-option active">10</button>
-                        <button class="question-option">15</button>
-                        <button class="question-option">20</button>
-                        <button class="question-option">25</button>
+                        <button class="question-option" data-nquestion="5">
+                            5
+                        </button>
+                        <button
+                            class="question-option active"
+                            data-Nquestion="10"
+                        >
+                            10
+                        </button>
+                        <button class="question-option" data-nquestion="15">
+                            15
+                        </button>
+                        <button class="question-option" data-nquestion="20">
+                            20
+                        </button>
+                        <button class="question-option" data-nquestion="25">
+                            25
+                        </button>
                     </div>
                 </div>
                 <button class="star-quizt-button">Star Quiz</button>
