se le agregaron aniamciones para mas interactividad ala apliccion

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div id="app">
-            <div class="config-container">
+            <div class="config-container animate__animated animate__bounce">
                 <h2 class="config-title">Quiz Configuration</h2>
                 <div class="config-option">
                     <h4 class="option-title">Selec Category</h4>
@@ -71,7 +71,7 @@
                 <button class="star-quizt-button">Star Quiz</button>
             </div>
 
-            <section class="quiz-container">
+            <section class="quiz-container animate__animated">
                 <header class="quiz-header">
                     <h2 class="quiz-title">Quiz Aplication</h2>
 
@@ -120,7 +120,7 @@
                 </footer>
             </section>
 
-            <section class="result-container">
+            <section class="result-container animate__animated">
                 <img
                     src="./public/quiz-over.png"
                     alt="images"
