se removieron los comentarios

--- a/index.html
+++ b/index.html
@@ -83,29 +83,7 @@
 
                 <div class="quiz-content">
                     <h1 class="queztion-text"></h1>
-                    <ul class="answer-options">
-                        <!-- <li class="answer-option">
-                            <p>Crte funtion MyFunction ( ) {}</p>
-                        </li>
-
-                        <li class="answer-option">
-                            <p>Crte funtion MyFunction ( ) {}</p>
-                        </li>
-
-                        <li class="answer-option correct">
-                            <p>funtion MyFunction ( ) {}</p>
-                            <span class="material-symbols-outlined">
-                                task_alt
-                            </span>
-                        </li>
-
-                        <li class="answer-option incorrect">
-                            <p>func MyFunction ( ) {}</p>
-                            <span class="material-symbols-outlined">
-                                cancel
-                            </span>
-                        </li> -->
-                    </ul>
+                    <ul class="answer-options"></ul>
                 </div>
 
                 <footer class="quiz-footer">
